hphp/hack/test/typecheck/as_expression/tuple3.php.exp
File "tuple3.php", line 7, characters 5-6:
Invalid argument (Typing[4110])
File "tuple3.php", line 3, characters 12-29:
Expected (int, int, string)
File "tuple3.php", line 6, characters 9-21:
But got (int, string)
