hphp/hack/test/typecheck/as_expression/tuple3.php
<?hh // partial

function g((int, int, string) $x) {}

function f(mixed $x) {
  $x as (int, string);
  g($x);
}
